--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "api": "cd api && venv/bin/flask run --no-debugger"
+    "api": "cd api && venv/bin/flask run -h localhost -p 5001 --no-debugger"
   },
   "dependencies": {
     "react": "^19.2.0",
